add install and lib dir

--- a/user.properties
+++ b/user.properties
@@ -1,29 +1,10 @@
-ftpserver.user.hdfs.homedirectory=/
-ftpserver.user.hdfs.userpassword=hdfs
-ftpserver.user.hdfs.enableflag=true
-ftpserver.user.hdfs.writepermission=true
-ftpserver.user.hdfs.idletime=0
-ftpserver.user.hdfs.maxloginnumber=0
-ftpserver.user.hdfs.maxloginperip=0
-ftpserver.user.hdfs.uploadrate=0
-ftpserver.user.hdfs.downloadrate=0
+ftpserver.user.drm.homedirectory=/drm
+ftpserver.user.drm.userpassword=cHlRQaZ_tgPL
+ftpserver.user.drm.enableflag=true
+ftpserver.user.drm.writepermission=true
+ftpserver.user.drm.idletime=0
+ftpserver.user.drm.maxloginnumber=0
+ftpserver.user.drm.maxloginperip=0
+ftpserver.user.drm.uploadrate=0
+ftpserver.user.drm.downloadrate=0
 
-ftpserver.user.hunantv.homedirectory=/
-ftpserver.user.hunantv.userpassword=hunantv
-ftpserver.user.hunantv.enableflag=true
-ftpserver.user.hunantv.writepermission=true
-ftpserver.user.hunantv.idletime=0
-ftpserver.user.hunantv.maxloginnumber=0
-ftpserver.user.hunantv.maxloginperip=0
-ftpserver.user.hunantv.uploadrate=0
-ftpserver.user.hunantv.downloadrate=0
-
-ftpserver.user.hgw.homedirectory=/abc
-ftpserver.user.hgw.userpassword=hgw
-ftpserver.user.hgw.enableflag=true
-ftpserver.user.hgw.writepermission=true
-ftpserver.user.hgw.idletime=0
-ftpserver.user.hgw.maxloginnumber=0
-ftpserver.user.hgw.maxloginperip=0
-ftpserver.user.hgw.uploadrate=0
-ftpserver.user.hgw.downloadrate=0
