--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,11 @@
    <artifactId>hdfs-ftp</artifactId>
    <version>1.0-SNAPSHOT</version>
 
+   <scm>
+      <connection>scm:git:https://github.com/dominikcebula/hdfs-ftp.git</connection>
+      <tag>HEAD</tag>
+   </scm>
+
    <dependencies>
       <dependency>
          <groupId>org.apache.hadoop</groupId>
@@ -29,6 +34,19 @@
             <configuration>
                <source>1.8</source>
                <target>1.8</target>
+            </configuration>
+         </plugin>
+         <plugin>
+            <groupId>org.codehaus.mojo</groupId>
+            <artifactId>versions-maven-plugin</artifactId>
+            <version>2.2</version>
+         </plugin>
+         <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-scm-plugin</artifactId>
+            <version>1.9.5</version>
+            <configuration>
+               <tag>${project.artifactId}-${project.version}</tag>
             </configuration>
          </plugin>
       </plugins>
