--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,33 @@
 
    <groupId>com.dominikcebula.hadoop.ftp</groupId>
    <artifactId>hdfs-ftp</artifactId>
-   <version>1.1-SNAPSHOT</version>
+   <version>1.0</version>
+
+   <name>${project.groupId}:${project.artifactId}</name>
+   <description>
+      HDFS-FTP is a library which provides Apache MINA FileSystemView implementation for HDFS.
+      This allows you to easily create FTP over HDFS server embedded into your project.
+   </description>
+   <url>https://github.com/dominikcebula/hdfs-ftp</url>
+   <licenses>
+      <license>
+         <name>The Apache License, Version 2.0</name>
+         <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
+      </license>
+   </licenses>
+   <developers>
+      <developer>
+         <name>Dominik Cebula</name>
+         <email>dominikcebula@gmail.com</email>
+         <organization>Dominik Cebula</organization>
+         <organizationUrl>http://dominikcebula.com/</organizationUrl>
+      </developer>
+   </developers>
+   <scm>
+      <connection>scm:git:git://github.com/dominikcebula/hdfs-ftp.git</connection>
+      <developerConnection>scm:git:ssh://github.com:dominikcebula/hdfs-ftp.git</developerConnection>
+      <url>http://github.com/dominikcebula/hdfs-ftp</url>
+   </scm>
 
    <dependencies>
       <dependency>
@@ -36,6 +62,7 @@
          <plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-compiler-plugin</artifactId>
+            <version>3.6.1</version>
             <configuration>
                <source>1.8</source>
                <target>1.8</target>
@@ -51,6 +78,46 @@
                <nexusUrl>https://oss.sonatype.org/</nexusUrl>
                <autoReleaseAfterClose>false</autoReleaseAfterClose>
             </configuration>
+         </plugin>
+         <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-source-plugin</artifactId>
+            <version>2.2.1</version>
+            <executions>
+               <execution>
+                  <id>attach-sources</id>
+                  <goals>
+                     <goal>jar-no-fork</goal>
+                  </goals>
+               </execution>
+            </executions>
+         </plugin>
+         <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-javadoc-plugin</artifactId>
+            <version>2.9.1</version>
+            <executions>
+               <execution>
+                  <id>attach-javadocs</id>
+                  <goals>
+                     <goal>jar</goal>
+                  </goals>
+               </execution>
+            </executions>
+         </plugin>
+         <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-gpg-plugin</artifactId>
+            <version>1.5</version>
+            <executions>
+               <execution>
+                  <id>sign-artifacts</id>
+                  <phase>verify</phase>
+                  <goals>
+                     <goal>sign</goal>
+                  </goals>
+               </execution>
+            </executions>
          </plugin>
       </plugins>
    </build>
